[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "dnspython>=2.7.0",
    "flask>=3.0.3",
    "pymongo>=4.10.1",
    "requests>=2.32.3",
    "telegram>=0.0.1",
    "telnyx>=2.1.3",
    "vonage>=3.17.4",
]
